<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:contentDescription="@string/app_name"
       android:scaleType="centerCrop"
       android:src="@drawable/teenage"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_sign_in_screen"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingStart="@dimen/_30sdp"
            android:paddingRight="@dimen/_30sdp"
            app:layout_constraintBottom_toTopOf="@id/loginToContinue"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginToContinue"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/inputEmail"
            android:layout_marginBottom="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingStart="@dimen/_30sdp"
            android:paddingRight="@dimen/_30sdp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="#ECECEC"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@id/inputPassword"
            android:layout_marginBottom="@dimen/_10ssp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textColorHint="#ECECEC"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@id/frameLayout"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true"
            android:id="@+id/frameLayout"
            app:layout_constraintBottom_toTopOf="@id/textForgotPassword"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingStart="@dimen/_30sdp"
            android:paddingRight="@dimen/_30sdp">

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:background="@drawable/background_button" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textCreateNewAccount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:gravity="center_horizontal"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>