<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddMapActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/teenage"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_sign_in_screen"/>

    <TextView
        android:id="@+id/categoryInfoGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/choose_activity_category"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/background_input"
        android:id="@+id/spinner"
        app:layout_constraintBottom_toTopOf="@id/visibilityTimeGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10ssp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp" />

    <TextView
        android:id="@+id/visibilityTimeGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/set_visibility_duration"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/timeSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/background_input"
        android:id="@+id/timeSpinner"
        app:layout_constraintBottom_toTopOf="@id/descriptionGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10ssp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp" />

    <TextView
        android:id="@+id/descriptionGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/describe_event"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:maxLines="3"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:gravity="top"
        android:hint="@string/description"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="#ECECEC"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@id/accept"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        android:id="@+id/frameLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingStart="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>

    <Button
        android:id="@+id/accept"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:background="@drawable/background_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_width="match_parent"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:background="@drawable/background_button_gray"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>