<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_chat"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/krzywa"
        android:contentDescription="@string/app_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/imageBack"
        android:background="@drawable/background_icon"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        android:tint="@color/primary_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="#ECECEC"
        android:textSize="@dimen/_13ssp"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/buttonResetPassword"/>

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/reset_password"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_button_su"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>